tests/parsing/bad/single_error.catala_en
## Single parsing error

```catala
scope A:
  definition i equals let x equals 3 in 1 / 0

declaration scope A:
  input x content integer
  output i contents decimal
  aze aze aze
  output i content decimal
  output g content decimal
```

```catala-test-cli
$ catala test-scope A
┌─[ERROR]─
│
│  Syntax error at "contents":
│  unexpected token.
│  Those are valid at this point: "content", "condition", "scope".
│
├─➤ tests/parsing/bad/single_error.catala_en:5.12-5.20:
│   │
│ 5 │   output i contents decimal
│   │            ‾‾‾‾‾‾‾‾
│
│ Maybe you wanted to write: "content"?
└─
#return code 123#
```
